fixed styling & select on ios

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,13 @@
 html,body {
+    margin: 0;
+    padding: 0;
     background: aliceblue;
     height: 100%
 }
 section {
     min-height: calc(100vh - 70px);
-    position:relative
+    position:relative;
+}
+.main {
+    margin-bottom: 90px;
 }
